--- a/index.html
+++ b/index.html
@@ -17,9 +17,15 @@
     </script>
 
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico" sizes="any">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-    <meta charset="UTF-8">
+    <!-- ICONOS NIMBUS -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/icon-512.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <meta name="theme-color" content="#2a6df5">
+    <link rel="manifest" href="/manifest.json">
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google Fonts: Playfair Display -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
