--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
         // Stream Map - Reliable Public Streams
         const streamMap = {
             "70s Music": "https://pureplay.cdnstream1.com/6011_128.mp3", // Dedicated 70s
-            "80s Music": "https://listen.181fm.com/181-awesome80s_128k.mp3",
+            "80s Music": "https://ice2.somafm.com/u80s-128-mp3",
             "90s Music": "https://listen.181fm.com/181-star90s_128k.mp3",
             "00s Music": "https://pureplay.cdnstream1.com/6034_128.mp3",
             "Today's Top Hits": "https://listen.181fm.com/181-power_128k.mp3",
